--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -60,19 +60,19 @@ jobs:
           function extract_values {
             local branch=$1
             local output_file=$2
-      
+
             if [ -n "$branch" ]; then
               git checkout "$branch"
-      
-              # Node.js script to extract feature flag values from both FeatureFlagMapping and FeatureFlag enum
+
+              # Node.js script to extract feature flag values
               node -e "
                 const fs = require('fs');
                 const path = require('path');
                 const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE || 'FeatureFlags.tsx');
                 const content = fs.readFileSync(featureFlagFilePath, 'utf8');
-      
+
                 let values = [];
-      
+
                 // Match FeatureFlagMapping section and extract values
                 const mappingRegex = /export const FeatureFlagMapping\\s*=\\s*{([\\s\\S]+?)}/;
                 const mappingMatch = content.match(mappingRegex);
@@ -81,7 +81,7 @@ jobs:
                   const mappingValues = [...mappingContent.matchAll(/: ['\"]?([A-Za-z0-9_]+)['\"]?/g)].map(m => m[1]);
                   values = values.concat(mappingValues);
                 }
-      
+
                 // Match FeatureFlag enum section and extract values
                 const enumRegex = /export enum FeatureFlag\\s*{([\\s\\S]+?)}/;
                 const enumMatch = content.match(enumRegex);
@@ -90,17 +90,17 @@ jobs:
                   const enumValues = [...enumContent.matchAll(/['\"]?([A-Za-z0-9_]+)['\"]?/g)].map(m => m[1]);
                   values = values.concat(enumValues);
                 }
-      
+
                 // Print unique values
                 const uniqueValues = [...new Set(values)];
                 uniqueValues.forEach(value => console.log(value));
               " > "$output_file"
-      
+
             else
               echo "Branch $branch is not available. Skipping flag extraction."
               touch "$output_file"
             fi
-      
+
             echo "Values extracted from $branch:"
             cat "$output_file" || echo "No values extracted from $branch"
           }
@@ -119,84 +119,74 @@ jobs:
           echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-          # Function to compare values without keys
+          # Function to compare values between two branches
           compare_values() {
-            local -n current_values=$1
-            local -n previous_values=$2
-            local current_branch=$3
-            local previous_branch=$4
+            local -n base_values=$1      # Base/reference branch values
+            local -n target_values=$2    # Target branch values
+            local base_branch=$3         # Name of the base branch
+            local target_branch=$4       # Name of the target branch
 
-            # New values table
+            # New values in target branch compared to base branch
             new_found=false
-            for value in "${current_values[@]}"; do
-              if [[ ! " ${previous_values[*]} " =~ " ${value} " ]]; then
+            for value in "${target_values[@]}"; do
+              if [[ ! " ${base_values[*]} " =~ " ${value} " ]]; then
                 new_found=true
                 break
               fi
             done
             if [ "$new_found" = true ]; then
-              echo "## New Values in $current_branch (Compared to $previous_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "| Count | $current_branch Value | $previous_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "|-------|------------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "## New Values in $target_branch (Compared to $base_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "| Count | $target_branch Value | $base_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "|-------|-----------------------|---------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
               
               count=1
-              for value in "${current_values[@]}"; do
-                if [[ ! " ${previous_values[*]} " =~ " ${value} " ]]; then
+              for value in "${target_values[@]}"; do
+                if [[ ! " ${base_values[*]} " =~ " ${value} " ]]; then
                   echo "| $count | \`$value\` | N/A | New 🔵 |" >> ${{ env.FEATURE_FLAGS_DOC }}
                   ((count++))
                 fi
               done
               echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
             else
-              echo "## New Values in $current_branch (Compared to $previous_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "## New Values in $target_branch (Compared to $base_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
               echo "- No new values found" >> ${{ env.FEATURE_FLAGS_DOC }}
               echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
             fi
 
-            # Deleted values table
+            # Deleted values in target branch compared to base branch
             deleted_found=false
-            for value in "${previous_values[@]}"; do
-              if [[ ! " ${current_values[*]} " =~ " ${value} " ]]; then
+            for value in "${base_values[@]}"; do
+              if [[ ! " ${target_values[*]} " =~ " ${value} " ]]; then
                 deleted_found=true
                 break
               fi
             done
             if [ "$deleted_found" = true ]; then
-              echo "## Deleted Values in $current_branch (Compared to $previous_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "| Count | $previous_branch Value | $current_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "|-------|------------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "## Deleted Values in $target_branch (Compared to $base_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "| Count | $base_branch Value | $target_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "|-------|---------------------|-----------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
               
               count=1
-              for value in "${previous_values[@]}"; do
-                if [[ ! " ${current_values[*]} " =~ " ${value} " ]]; then
+              for value in "${base_values[@]}"; do
+                if [[ ! " ${target_values[*]} " =~ " ${value} " ]]; then
                   echo "| $count | \`$value\` | N/A | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
                   ((count++))
                 fi
               done
               echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
             else
-              echo "## Deleted Values in $previous_branch (Compared to $current_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "## Deleted Values in $target_branch (Compared to $base_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
               echo "- No deleted values found" >> ${{ env.FEATURE_FLAGS_DOC }}
               echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
             fi
           }
 
-          # Compare latest and previous release branches
-          if [ -n "${latest_release_values[0]}" ] && [ -n "${previous_release_values[0]}" ]; then
-            compare_values latest_release_values previous_release_values "${{ steps.get-latest-release.outputs.latest_branch }}" "${{ steps.get-latest-release.outputs.previous_branch }}"
-          fi
-
-          # Compare latest release with main
-          if [ -n "${latest_release_values[0]}" ]; then
-            compare_values latest_release_values main_values "${{ steps.get-latest-release.outputs.latest_branch }}" "main"
-          fi
-
-          # Print standalone feature flags for each branch with count
+          # Function to print all feature flags for a given branch
           print_all_values() {
             local -n values=$1
             local branch_name=$2
 
-            echo "## Feature Flags in \`$branch_name\`" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "## All Feature Flags in $branch_name" >> ${{ env.FEATURE_FLAGS_DOC }}
             echo "| Count | $branch_name Value |" >> ${{ env.FEATURE_FLAGS_DOC }}
             echo "|-------|---------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
@@ -208,7 +198,17 @@ jobs:
             echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
           }
 
-          # Print all feature flag values for each branch
+          # Compare latest release to previous release
+          if [ -n "${latest_release_values[0]}" ] && [ -n "${previous_release_values[0]}" ]; then
+            compare_values previous_release_values latest_release_values "${{ steps.get-latest-release.outputs.previous_branch }}" "${{ steps.get-latest-release.outputs.latest_branch }}"
+          fi
+
+          # Compare main to latest release
+          if [ -n "${main_values[0]}" ] && [ -n "${latest_release_values[0]}" ]; then
+            compare_values main_values latest_release_values "main" "${{ steps.get-latest-release.outputs.latest_branch }}"
+          fi
+
+          # Print all feature flags for each branch
           if [ -n "${latest_release_values[0]}" ]; then
             print_all_values latest_release_values "${{ steps.get-latest-release.outputs.latest_branch }}"
           fi
