--- a/.github/workflows/updatedComparejson.yml
+++ b/.github/workflows/updatedComparejson.yml
@@ -26,10 +26,6 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Dependencies
-        run: |
-          npm install axios exceljs json2csv
-
       - name: Run JSON Comparison Script
         env:
           OLD_URL: ${{ github.event.inputs.old_url }}
@@ -38,33 +34,40 @@ jobs:
           LOB: ${{ github.event.inputs.lob }}
         run: |
           node -e "
-            const axios = require('axios');
+            const fetch = require('axios');
             const ExcelJS = require('exceljs');
+            const { Parser } = require('json2csv');
             const fs = require('fs');
 
             async function fetchJson(url) {
-              const response = await axios.get(url);
+              const response = await fetch.get(url);
               return response.data;
             }
 
-            function addWorksheetWithUniqueName(workbook, name) {
-  // Truncate the name to 31 characters
-  let sanitizedName = name.slice(0, 31);
-  let uniqueName = sanitizedName;
-  let counter = 1;
+            function removeIgnoredKeys(obj) {
+              const excludedKeys = ['id', 'lagoon.updatedBy', 'lagoon.updatedAt'];
+              if (Array.isArray(obj)) {
+                return obj.map((item) => removeIgnoredKeys(item));
+              } else if (obj && typeof obj === 'object') {
+                const result = {};
+                for (const key in obj) {
+                  if (!excludedKeys.includes(key)) {
+                    result[key] = removeIgnoredKeys(obj[key]);
+                  }
+                }
+                return result;
+              }
+              return obj;
+            }
 
-  // Ensure the name is unique within the workbook
-  while (workbook.getWorksheet(uniqueName)) {
-    uniqueName = `${sanitizedName.slice(0, 28)}_${counter}`; // Adjust to fit within 31 characters
-    counter += 1;
-  }
-
-  return workbook.addWorksheet(uniqueName);
-}
+            function getValidSheetName(name, counter) {
+              const sanitizedName = name.replace(/[^a-zA-Z0-9]/g, '_');
+              return sanitizedName.slice(0, 28) + '_' + counter;
+            }
 
             async function compareJson() {
-              const oldData = await fetchJson(process.env.OLD_URL);
-              const newData = await fetchJson(process.env.NEW_URL);
+              const oldDataRaw = await fetchJson(process.env.OLD_URL);
+              const newDataRaw = await fetchJson(process.env.NEW_URL);
               const environment = process.env.ENVIRONMENT;
               const lob = process.env.LOB;
 
@@ -72,6 +75,8 @@ jobs:
               const dataByParentKey = {};
 
               function processParentKey(parentKey, oldObj, newObj) {
+                if (parentKey === 'smartling') return;
+
                 const newEntries = [];
                 const notFoundEntries = [];
                 const differentEntries = [];
@@ -84,8 +89,8 @@ jobs:
                     notFoundEntries.push({ key, ...oldObj[key] });
                   } else if (JSON.stringify(oldObj[key]) !== JSON.stringify(newObj[key])) {
                     const diffRows = [
-                      { key, diff_type: `${environment} ${lob} - Old Value`, ...oldObj[key] },
-                      { key: '', diff_type: `${environment} ${lob} - New Value`, ...newObj[key] }
+                      { key, diff_type: environment + ' ' + lob + ' - Old Value', ...oldObj[key] },
+                      { key: '', diff_type: environment + ' ' + lob + ' - New Value', ...newObj[key] }
                     ];
                     differentEntries.push(...diffRows);
                   }
@@ -102,25 +107,34 @@ jobs:
                 };
               }
 
-              Object.keys(oldData).forEach((parentKey) => {
-                const oldObj = oldData[parentKey];
-                const newObj = newData[parentKey] || {};
+              Object.keys(oldDataRaw).forEach((parentKey) => {
+                const oldObj = removeIgnoredKeys(oldDataRaw[parentKey]);
+                const newObj = removeIgnoredKeys(newDataRaw[parentKey] || {});
                 processParentKey(parentKey, oldObj, newObj);
               });
 
-              Object.keys(newData)
-                .filter((parentKey) => !oldData.hasOwnProperty(parentKey))
+              Object.keys(newDataRaw)
+                .filter((parentKey) => !oldDataRaw.hasOwnProperty(parentKey))
                 .forEach((parentKey) => {
-                  const newObj = newData[parentKey];
+                  const newObj = removeIgnoredKeys(newDataRaw[parentKey]);
                   processParentKey(parentKey, {}, newObj);
                 });
 
+              let counter = 1;
               for (const [parentKey, { newEntries, notFoundEntries, differentEntries }] of Object.entries(dataByParentKey)) {
-              const sheet = addWorksheetWithUniqueName(workbook, parentKey);
+                const sheetName = getValidSheetName(parentKey, counter);
+                counter++;
+                const sheet = workbook.addWorksheet(sheetName);
+
+                sheet.addRow(['Parent Key: ' + parentKey]);
+                sheet.addRow([]);
+
+                const allColumns = new Set([...newEntries, ...notFoundEntries, ...differentEntries].flatMap(Object.keys));
+                sheet.columns = Array.from(allColumns).map((header) => ({ header, key: header }));
 
                 if (newEntries.length > 0) {
                   sheet.addRow(['New Entries']);
-                  sheet.columns = Object.keys(newEntries[0]).map((header) => ({ header, key: header }));
+                  sheet.addRow(Array.from(allColumns));
                   sheet.addRows(newEntries);
                   sheet.addRow([]);
                 } else {
@@ -130,7 +144,7 @@ jobs:
 
                 if (notFoundEntries.length > 0) {
                   sheet.addRow(['Not Found Entries']);
-                  sheet.columns = Object.keys(notFoundEntries[0]).map((header) => ({ header, key: header }));
+                  sheet.addRow(Array.from(allColumns));
                   sheet.addRows(notFoundEntries);
                   sheet.addRow([]);
                 } else {
@@ -140,17 +154,22 @@ jobs:
 
                 if (differentEntries.length > 0) {
                   sheet.addRow(['Different Entries']);
-                  sheet.columns = Object.keys(differentEntries[0]).map((header) => ({ header, key: header }));
-                  differentEntries.forEach((entry) => sheet.addRow(entry));
+                  sheet.addRow(Array.from(allColumns));
+                  sheet.addRows(differentEntries);
                   sheet.addRow([]);
                 } else {
                   sheet.addRow(['No Different Entries']);
                   sheet.addRow([]);
                 }
+
+                const parser = new Parser();
+                if (newEntries.length > 0) fs.writeFileSync('json_csv_outputs/' + sheetName + '_new_entries.csv', parser.parse(newEntries));
+                if (notFoundEntries.length > 0) fs.writeFileSync('json_csv_outputs/' + sheetName + '_not_found_entries.csv', parser.parse(notFoundEntries));
+                if (differentEntries.length > 0) fs.writeFileSync('json_csv_outputs/' + sheetName + '_different_entries.csv', parser.parse(differentEntries));
               }
 
               await workbook.xlsx.writeFile('json_differences.xlsx');
-              console.log('Excel file generated successfully.');
+              console.log('Excel and CSV files generated successfully.');
             }
 
             compareJson().catch((error) => {
@@ -164,3 +183,9 @@ jobs:
         with:
           name: JSON Comparison Report
           path: json_differences.xlsx
+
+      - name: Upload CSV Outputs
+        uses: actions/upload-artifact@v3
+        with:
+          name: JSON Comparison CSVs
+          path: 'json_csv_outputs/*.csv'
